Show comments in the treeview too
This makes items easier to recognize, also cache the
generated search text when searching a launcher to
speed it up a bit.
Minor cleanups.

--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -37,6 +37,8 @@
       <column type="gchararray"/>
       <!-- column-name filename -->
       <column type="gchararray"/>
+      <!-- column-name search -->
+      <column type="gchararray"/>
     </columns>
   </object>
   <object class="GtkListStore" id="entry-store">
@@ -100,7 +102,7 @@
                             <child>
                               <object class="GtkCellRendererText" id="entryrenderername"/>
                               <attributes>
-                                <attribute name="text">1</attribute>
+                                <attribute name="markup">1</attribute>
                               </attributes>
                             </child>
                           </object>
@@ -747,7 +749,7 @@
                         <child>
                           <object class="GtkCellRendererText" id="addrenderername"/>
                           <attributes>
-                            <attribute name="text">1</attribute>
+                            <attribute name="markup">1</attribute>
                           </attributes>
                         </child>
                       </object>
