--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -168,7 +168,7 @@
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text" translatable="yes">Add new item to the launcher</property>
+                            <property name="tooltip_text" translatable="yes">Add one or more existing items to the launcher</property>
                             <child>
                               <object class="GtkImage" id="image4">
                                 <property name="visible">True</property>
@@ -183,22 +183,40 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkButton" id="item-remove">
+                          <object class="GtkButton" id="item-new">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="tooltip_text" translatable="yes">Remove currently selected item</property>
+                            <property name="tooltip_text" translatable="yes">Add a new empty item</property>
                             <child>
-                              <object class="GtkImage" id="image5">
+                              <object class="GtkImage" id="image10">
                                 <property name="visible">True</property>
-                                <property name="stock">gtk-remove</property>
+                                <property name="stock">gtk-new</property>
+                                <property name="icon-size">4</property>
+                              </object>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="position">3</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="item-delete">
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="tooltip_text" translatable="yes">Delete the currently selected item</property>
+                            <child>
+                              <object class="GtkImage" id="image9">
+                                <property name="visible">True</property>
+                                <property name="stock">gtk-delete</property>
                                 <property name="icon-size">4</property>
                               </object>
                             </child>
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="position">3</property>
+                            <property name="position">4</property>
                           </packing>
                         </child>
                         <child>
@@ -208,7 +226,7 @@
                             <property name="receives_default">True</property>
                             <property name="tooltip_text" translatable="yes">Edit the currently selected item</property>
                             <child>
-                              <object class="GtkImage" id="image6">
+                              <object class="GtkImage" id="image1">
                                 <property name="visible">True</property>
                                 <property name="stock">gtk-edit</property>
                                 <property name="icon-size">4</property>
@@ -217,7 +235,7 @@
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="position">4</property>
+                            <property name="position">5</property>
                           </packing>
                         </child>
                       </object>
@@ -305,6 +323,7 @@
                       <object class="GtkComboBox" id="arrow-position">
                         <property name="visible">True</property>
                         <property name="model">arrow-position-store</property>
+                        <property name="active">0</property>
                         <property name="button_sensitivity">on</property>
                         <child>
                           <object class="GtkCellRendererText" id="cellrenderertext1"/>
@@ -681,7 +700,7 @@
     <property name="icon_name">gtk-add</property>
     <property name="type_hint">normal</property>
     <property name="has_separator">False</property>
-    <property name="subtitle" translatable="yes">Add a new or custom launcher item</property>
+    <property name="subtitle" translatable="yes">Add one or more existing items to the launcher</property>
     <child internal-child="vbox">
       <object class="GtkVBox" id="dialog-vbox4">
         <property name="visible">True</property>
@@ -784,29 +803,15 @@
               </packing>
             </child>
             <child>
-              <object class="GtkButton" id="button-custom">
-                <property name="label" translatable="yes">C_ustom</property>
-                <property name="visible">True</property>
-                <property name="sensitive">False</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">True</property>
-                <property name="image">image1</property>
-                <property name="use_underline">True</property>
-              </object>
-              <packing>
-                <property name="position">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkButton" id="button7">
-                <property name="label" translatable="yes">gtk-cancel</property>
+              <object class="GtkButton" id="button5">
+                <property name="label" translatable="yes">gtk-close</property>
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">True</property>
                 <property name="use_stock">True</property>
               </object>
               <packing>
-                <property name="position">2</property>
+                <property name="position">1</property>
               </packing>
             </child>
           </object>
@@ -819,14 +824,8 @@
       </object>
     </child>
     <action-widgets>
-      <action-widget response="2">button-add</action-widget>
-      <action-widget response="3">button-custom</action-widget>
-      <action-widget response="0">button7</action-widget>
+      <action-widget response="1">button-add</action-widget>
+      <action-widget response="0">button5</action-widget>
     </action-widgets>
-  </object>
-  <object class="GtkImage" id="image1">
-    <property name="visible">True</property>
-    <property name="stock">gtk-new</property>
-    <property name="icon-size">4</property>
   </object>
 </interface>
