Set sensitivity of some launcher dialog widgets.

--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -310,7 +310,7 @@
                     <property name="visible">True</property>
                     <property name="spacing">12</property>
                     <child>
-                      <object class="GtkLabel" id="label3">
+                      <object class="GtkLabel" id="arrow-position-label">
                         <property name="visible">True</property>
                         <property name="label" translatable="yes">_Arrow button position:</property>
                         <property name="use_underline">True</property>
