Various tasklist changes.
Change the combo box in the properties dialog to a check box with
the label "Show button labels". Makes it easier for people who are
not familiar with the old Xfce icon box.

Use a horizontal boolean internally instead of GtkOrientation.

Some fixes in the size request code.

--- a/plugins/tasklist/tasklist-dialog.glade
+++ b/plugins/tasklist/tasklist-dialog.glade
@@ -3,20 +3,6 @@
   <!-- interface-requires gtk+ 2.12 -->
   <!-- interface-requires libxfce4ui 0.0 -->
   <!-- interface-naming-policy toplevel-contextual -->
-  <object class="GtkListStore" id="style-model">
-    <columns>
-      <!-- column-name title -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">Tasklist</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Iconbox</col>
-      </row>
-    </data>
-  </object>
   <object class="XfceTitledDialog" id="dialog">
     <property name="title" translatable="yes">Task List Properties</property>
     <property name="icon_name">gtk-properties</property>
@@ -47,40 +33,15 @@
                         <property name="border_width">6</property>
                         <property name="spacing">6</property>
                         <child>
-                          <object class="GtkHBox" id="hbox2">
+                          <object class="GtkCheckButton" id="show-labels">
+                            <property name="label" translatable="yes">Show button _labels</property>
                             <property name="visible">True</property>
-                            <property name="spacing">12</property>
-                            <child>
-                              <object class="GtkLabel" id="label2">
-                                <property name="visible">True</property>
-                                <property name="xalign">0</property>
-                                <property name="label" translatable="yes">_Layout:</property>
-                                <property name="use_underline">True</property>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="position">0</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkComboBox" id="style">
-                                <property name="visible">True</property>
-                                <property name="model">style-model</property>
-                                <child>
-                                  <object class="GtkCellRendererText" id="cellrenderertext1"/>
-                                  <attributes>
-                                    <attribute name="text">0</attribute>
-                                  </attributes>
-                                </child>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="position">1</property>
-                              </packing>
-                            </child>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="draw_indicator">True</property>
                           </object>
                           <packing>
-                            <property name="expand">False</property>
                             <property name="position">0</property>
                           </packing>
                         </child>
