Make show label insensitive in launcher, not implemented yet.

--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -281,6 +281,7 @@
                   <object class="GtkCheckButton" id="show-labels">
                     <property name="label" translatable="yes">Show _labels instead of icons</property>
                     <property name="visible">True</property>
+                    <property name="sensitive">False</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
                     <property name="use_underline">True</property>
