--- a/panel/panel-preferences-dialog.glade
+++ b/panel/panel-preferences-dialog.glade
@@ -79,6 +79,7 @@
                 <child>
                   <object class="GtkButton" id="panel-remove">
                     <property name="visible">True</property>
+                    <property name="sensitive">False</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="tooltip_text">Remove the currently selected panel</property>
@@ -101,8 +102,9 @@
               </packing>
             </child>
             <child>
-              <object class="GtkNotebook" id="notebook1">
+              <object class="GtkNotebook" id="notebook">
                 <property name="visible">True</property>
+                <property name="sensitive">False</property>
                 <property name="can_focus">True</property>
                 <child>
                   <object class="GtkVBox" id="vbox2">
@@ -490,6 +492,7 @@
                           <object class="GtkTreeView" id="item-treeview">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="model">item-liststore</property>
                             <property name="headers_visible">False</property>
                             <property name="rules_hint">True</property>
                             <property name="enable_search">False</property>
@@ -507,6 +510,7 @@
                         <child>
                           <object class="GtkButton" id="item-up">
                             <property name="visible">True</property>
+                            <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip_text">Move currently selected item up by one row</property>
@@ -525,6 +529,7 @@
                         <child>
                           <object class="GtkButton" id="item-down">
                             <property name="visible">True</property>
+                            <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip_text">Move currently selected item down by one row</property>
@@ -543,6 +548,7 @@
                         <child>
                           <object class="GtkButton" id="item-add">
                             <property name="visible">True</property>
+                            <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip_text">Add new item to this panel</property>
@@ -561,6 +567,7 @@
                         <child>
                           <object class="GtkButton" id="item-remove">
                             <property name="visible">True</property>
+                            <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip_text">Remove currently selected item</property>
@@ -579,6 +586,7 @@
                         <child>
                           <object class="GtkButton" id="item-properties">
                             <property name="visible">True</property>
+                            <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip_text">Edit the currently selected item</property>
@@ -597,6 +605,7 @@
                         <child>
                           <object class="GtkButton" id="item-about">
                             <property name="visible">True</property>
+                            <property name="sensitive">False</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
                             <property name="tooltip_text">Show about information of the currently selected item</property>
@@ -721,9 +730,9 @@
   </object>
   <object class="GtkSizeGroup" id="sizegroup1">
     <widgets>
-      <widget name="label10"/>
-      <widget name="label9"/>
       <widget name="label7"/>
+      <widget name="label9"/>
+      <widget name="label10"/>
     </widgets>
   </object>
 </interface>
