--- a/plugins/systray/systray-dialog.glade
+++ b/plugins/systray/systray-dialog.glade
@@ -42,7 +42,7 @@
                                 <property name="xalign">0</property>
                                 <property name="label" translatable="yes">_Number of rows:</property>
                                 <property name="use_underline">True</property>
-                                <property name="mnemonic_widget">style-num-rows</property>
+                                <property name="mnemonic_widget">rows</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -50,9 +50,11 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkSpinButton" id="style-num-rows">
+                              <object class="GtkSpinButton" id="rows">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
+                                <property name="shadow_type">none</property>
+                                <property name="adjustment">rows-adjustment</property>
                                 <property name="numeric">True</property>
                               </object>
                               <packing>
@@ -66,7 +68,7 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkCheckButton" id="style-show-frame">
+                          <object class="GtkCheckButton" id="show-frame">
                             <property name="label" translatable="yes">Show _frame</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
@@ -103,12 +105,12 @@
                 <child>
                   <object class="GtkAlignment" id="alignment1">
                     <property name="visible">True</property>
-                    <property name="top_padding">6</property>
                     <property name="left_padding">12</property>
                     <child>
                       <object class="GtkScrolledWindow" id="scrolledwindow1">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="border_width">6</property>
                         <property name="hscrollbar_policy">automatic</property>
                         <property name="vscrollbar_policy">automatic</property>
                         <property name="shadow_type">in</property>
@@ -116,6 +118,8 @@
                           <object class="GtkTreeView" id="applications-treeview">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="headers_clickable">False</property>
+                            <property name="rules_hint">True</property>
                           </object>
                         </child>
                       </object>
@@ -152,6 +156,8 @@
                 <property name="use_stock">True</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">False</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -167,5 +173,12 @@
     <action-widgets>
       <action-widget response="0">close-button</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkAdjustment" id="rows-adjustment">
+    <property name="value">1</property>
+    <property name="lower">1</property>
+    <property name="upper">10</property>
+    <property name="step_increment">1</property>
+    <property name="page_increment">2</property>
   </object>
 </interface>
