--- a/plugins/launcher/launcher-dialog.glade
+++ b/plugins/launcher/launcher-dialog.glade
@@ -278,10 +278,9 @@
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkCheckButton" id="show-labels">
-                    <property name="label" translatable="yes">Show _labels instead of icons</property>
+                  <object class="GtkCheckButton" id="show-label">
+                    <property name="label" translatable="yes">Show _label instead of icon</property>
                     <property name="visible">True</property>
-                    <property name="sensitive">False</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">False</property>
                     <property name="use_underline">True</property>
